# prjectOS

./: .gitignore  index.html  mimari.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
notes/: Notlar.md  Yeni_Not_(9.07.2026).md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/layout/: CommandPalette.tsx  Header.tsx  Sidebar.tsx
src/features/git/: GitStatusCard.tsx
src/features/notes/: NotesEditor.tsx
src/features/tasks/: KanbanBoard.tsx
src/features/timeline/: TimelineView.tsx
src/pages/: DashboardPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx
src/services/: db.ts  git.ts  githubSync.ts  storage.ts
src/store/: projectStore.ts  themeStore.ts
src/types/: index.ts
