[package]
name = "project-os"
version = "1.0.0"
description = "ProjectOS — Kişisel Proje ve Geliştirme Yönetimi"
authors = ["yusuf"]
edition = "2021"

[lib]
name = "project_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
